# a2a-orchestrator

./: .gitignore  README.md  pyproject.toml  run.py
a2a_demo/: __init__.py
a2a_demo/agents/: __init__.py  base.py  research.py  routing.py  writer.py
a2a_demo/cli/: __init__.py  research.py  routing.py  send.py  writer.py
a2a_demo/core/: __init__.py  registry.py
a2a_demo/mcp/: __init__.py  manager.py
